--- a/menifest.yml
+++ b/menifest.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rserve-sidecar
+  name: rserve-sidecar-service
 spec:
   selector:
     app: rserve-sidecar
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rserve-sidecar
+  name: rserve-sidecar-deployment
   labels:
     app: rserve
 spec:
